# Security-Forge

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml  wrangler.toml
.github/workflows/: ci.yml
ai_framework/: README.md  demo.py
ai_framework/agent/: README.md  contracts.py  loop.py  system.py
ai_framework/headroom/: README.md  __init__.py  budget.py  fit.py
ai_framework/memory/: README.md  store.py
ai_framework/models/: README.md
ai_framework/skills/: README.md
ai_framework/tools/: README.md
backend/: app.py  service.py
defense/: README.md
docs/: README.md
frontend/: .gitignore  README.md  package-lock.json  package.json  wrangler.toml
frontend/public/: _headers  _redirects
frontend/src/: App.jsx
frontend/src/components/: Dashboard.jsx  TopNav.jsx
frontend/src/content/: catalog.js  profile.js
frontend/src/i18n/: strings.js
frontend/src/lib/: route.js
i18n/: README.md
knowledge_base/: README.md
labs/: README.md
tests/: test_backend.py  test_headroom.py  test_memory.py
vuln_search/: README.md
vuln_search/catalog/: INDEX.md
vuln_search/catalog/api_security/: README.md
vuln_search/catalog/broken_access_control/: README.md
vuln_search/catalog/broken_authentication/: README.md
vuln_search/catalog/clickjacking/: README.md
vuln_search/catalog/cors/: README.md
vuln_search/catalog/csrf/: README.md
vuln_search/catalog/dom_based/: README.md
vuln_search/catalog/file_upload/: README.md
vuln_search/catalog/graphql/: README.md
(+21 files in other folders)
